--- a/App/App.csproj
+++ b/App/App.csproj
@@ -76,6 +76,7 @@
     <Compile Include="GLTexture.cs" />
     <Compile Include="GLUniform.cs" />
     <Compile Include="GLVertinput.cs" />
+    <Compile Include="GLVertoutput.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="App.resx">
