Added c# executable code support <not fully implemented>

--- a/App/App.csproj
+++ b/App/App.csproj
@@ -61,8 +61,11 @@
     <Compile Include="App.Designer.cs">
       <DependentUpon>App.cs</DependentUpon>
     </Compile>
+    <Compile Include="code\simplecamera.cs" />
     <Compile Include="GLBuffer.cs" />
     <Compile Include="GLCamera.cs" />
+    <Compile Include="GLCSharp.cs" />
+    <Compile Include="GledControl.cs" />
     <Compile Include="GledXml.cs" />
     <Compile Include="GLFragoutput.cs" />
     <Compile Include="GLImage.cs" />
