--- a/App/App.csproj
+++ b/App/App.csproj
@@ -105,6 +105,13 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="resources\cube.xml" />
+    <Content Include="resources\quad.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="demos\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
