--- a/App/App.csproj
+++ b/App/App.csproj
@@ -43,7 +43,7 @@
       <HintPath>lib\Debug\OpenTK.GLControl.dll</HintPath>
     </Reference>
     <Reference Include="ScintillaNET">
-      <HintPath>..\..\..\ScintillaNET v2.6\ScintillaNET.dll</HintPath>
+      <HintPath>lib\Debug\ScintillaNET.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
