--- a/App/App.csproj
+++ b/App/App.csproj
@@ -49,19 +49,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>AppIcon.ico</ApplicationIcon>
+    <ApplicationIcon>resources\AppIcon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="OpenTK, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>lib\Release\OpenTK.dll</HintPath>
+      <HintPath>lib\Debug\OpenTK.dll</HintPath>
     </Reference>
     <Reference Include="OpenTK.GLControl, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>lib\Release\OpenTK.GLControl.dll</HintPath>
+      <HintPath>lib\Debug\OpenTK.GLControl.dll</HintPath>
     </Reference>
     <Reference Include="ScintillaNET">
-      <HintPath>lib\Debug\ScintillaNET.dll</HintPath>
+      <HintPath>lib\ScintillaNET.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
