Fixed ubsampling problem if system DPI are set higher than 125% (DPI aware).

--- a/App/App.csproj
+++ b/App/App.csproj
@@ -51,6 +51,8 @@
   <PropertyGroup>
     <ApplicationIcon>resources\AppIcon.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup />
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="OpenTK, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
