--- a/App/App.csproj
+++ b/App/App.csproj
@@ -125,6 +125,7 @@
     <None Include="demos\shadow_mapping.tech" />
     <None Include="demos\simple_include_header.tech" />
     <None Include="demos\simple_texture.tech" />
+    <None Include="demos\simple_vertoutput.tech" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -153,7 +154,7 @@
     <Content Include="demos\tex\lena.jpg" />
     <Content Include="res\syntax.xml" />
     <None Include="demos\simple.tech" />
-    <None Include="demos\fragoutput.tech" />
+    <None Include="demos\simple_fragoutput.tech" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6">
