--- a/App/App.csproj
+++ b/App/App.csproj
@@ -131,6 +131,7 @@
     <None Include="demos\simple_texture.tech" />
     <None Include="demos\simple_vertoutput.tech" />
     <None Include="demos\tutorial\01_hello_triangle.tech" />
+    <None Include="demos\tutorial\02_colored_triangle.tech" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
