Changed the way data can be loaded by buffer objects.

--- a/App/App.csproj
+++ b/App/App.csproj
@@ -80,6 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="demos\util\StaticCamera.cs" />
+    <Compile Include="src\GLText.cs" />
     <Compile Include="src\App.cs">
       <SubType>Form</SubType>
     </Compile>
