Set GL class fields only if they specify the right attribute

--- a/App/App.csproj
+++ b/App/App.csproj
@@ -84,6 +84,7 @@
     </Compile>
     <Compile Include="src\Data.cs" />
     <Compile Include="demos\util\StaticCamera.cs" />
+    <Compile Include="src\GLField.cs" />
     <Compile Include="src\GLText.cs" />
     <Compile Include="src\App.cs">
       <SubType>Form</SubType>
