--- a/App/App.csproj
+++ b/App/App.csproj
@@ -56,11 +56,11 @@
   <ItemGroup>
     <Reference Include="OpenTK, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>lib\OpenTK.dll</HintPath>
+      <HintPath>..\..\..\..\..\Projects\Repos\opentk\Binaries\OpenTK\Debug\OpenTK.dll</HintPath>
     </Reference>
     <Reference Include="OpenTK.GLControl, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>lib\OpenTK.GLControl.dll</HintPath>
+      <HintPath>..\..\..\..\..\Projects\Repos\opentk\Binaries\OpenTK\Debug\OpenTK.GLControl.dll</HintPath>
     </Reference>
     <Reference Include="ScintillaNET">
       <HintPath>lib\ScintillaNET.dll</HintPath>
@@ -81,6 +81,7 @@
   <ItemGroup>
     <Compile Include="demos\util\PoissonDisc.cs" />
     <Compile Include="demos\util\SpotLight.cs" />
+    <Compile Include="demos\util\Uniforms.cs" />
     <Compile Include="src\CodeEditor.cs">
       <SubType>Component</SubType>
     </Compile>
