Beginn adding introspection support

--- a/App/App.csproj
+++ b/App/App.csproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <Compile Include="demos\util\PoissonDisc.cs" />
     <Compile Include="demos\util\SpotLight.cs" />
+    <Compile Include="src\Extensions.cs" />
     <Compile Include="src\CodeEditor.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -137,6 +138,7 @@
     <None Include="demos\shadow_mapping.tech" />
     <None Include="demos\shadow_mapping_pcf.tech" />
     <None Include="demos\shadow_mapping_pcf2.tech" />
+    <None Include="demos\shadow_mapping_pcss.tech" />
     <None Include="demos\simple_include_header.tech" />
     <None Include="demos\simple_texture.tech" />
     <None Include="demos\simple_vertoutput.tech" />
