--- a/App/App.csproj
+++ b/App/App.csproj
@@ -117,6 +117,7 @@
     <Compile Include="src\GLTexture.cs" />
     <Compile Include="src\GLVertinput.cs" />
     <Compile Include="src\GLVertoutput.cs" />
+    <Compile Include="src\Introspection.cs" />
     <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\TabPage.cs">
