--- a/App/App.csproj
+++ b/App/App.csproj
@@ -170,7 +170,7 @@
     <Content Include="demos\geom\quad.xml" />
     <Content Include="demos\geom\triangle.xml" />
     <Content Include="demos\tex\lena.jpg" />
-    <Content Include="res\syntax.xml" />
+    <Content Include="conf\syntax.xml" />
     <None Include="demos\simple.tech" />
     <None Include="demos\simple_fragoutput.tech" />
   </ItemGroup>
