Fixed replace bug: After pressing Ctrl+R editing was disabled and therefore replace not possible. Added turntable camera with sample.

--- a/App/cs_ext.csproj
+++ b/App/cs_ext.csproj
@@ -53,6 +53,7 @@
     <Compile Include="csharp\SimpleCamera.cs" />
     <Compile Include="csharp\SpotLight.cs" />
     <Compile Include="csharp\StaticCamera.cs" />
+    <Compile Include="csharp\TurntableCamera.cs" />
     <Compile Include="csharp\UniformBlock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
