renamed debug shader folder. added samplers

--- a/App/App.csproj
+++ b/App/App.csproj
@@ -90,8 +90,9 @@
     <Compile Include="src\CodeEditor.Find.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="src\debug\fun.cs" />
-    <Compile Include="src\debug\vec.cs" />
+    <Compile Include="src\dbg\fun.cs" />
+    <Compile Include="src\dbg\sampler.cs" />
+    <Compile Include="src\dbg\vec.cs" />
     <Compile Include="src\Extensions.cs" />
     <Compile Include="src\CodeEditor.cs">
       <SubType>Component</SubType>
