Added pick fragment tool

--- a/App/App.csproj
+++ b/App/App.csproj
@@ -179,6 +179,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="resources\dbgBody.txt" />
+    <None Include="resources\ImgPick.png" />
     <None Include="resources\ImgDbg.png" />
     <None Include="resources\dbg.txt" />
     <None Include="resources\ImgOpen.png" />
