Resize icons. Refactoring. Documentation.

--- a/App/App.csproj
+++ b/App/App.csproj
@@ -83,6 +83,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\App.Debug.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="src\CodeEditor.AutoC.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -97,7 +100,6 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="src\Commands.cs" />
-    <Compile Include="src\Field.cs" />
     <Compile Include="src\GLDebugger.cs" />
     <Compile Include="src\GLInstance.cs" />
     <Compile Include="src\GLReference.cs" />
