--- a/App/App.csproj
+++ b/App/App.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>App</RootNamespace>
-    <AssemblyName>ProtoGL</AssemblyName>
+    <AssemblyName>ProtoFX</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -179,7 +179,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="resources\dbgBody.txt" />
-    <Content Include="resources\wiki\app.png" />
     <None Include="resources\ImgPick.png" />
     <None Include="resources\ImgDbg.png" />
     <None Include="resources\dbg.txt" />
@@ -211,6 +210,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="resources\wiki\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
