--- a/App/App.csproj
+++ b/App/App.csproj
@@ -96,6 +96,9 @@
     <Compile Include="src\CodeEditor.Find.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="src\CodeEditor.Hightlight.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="src\Compiler.cs" />
     <Compile Include="src\Extensions.cs" />
     <Compile Include="src\CodeEditor.cs">
@@ -131,6 +134,7 @@
     <Compile Include="src\GLVertoutput.cs" />
     <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\FXLexer.cs" />
     <Compile Include="src\TabPage.cs">
       <SubType>Component</SubType>
     </Compile>
