Extracted keyword list into a file. Code refactoring and documentation.

--- a/App/App.csproj
+++ b/App/App.csproj
@@ -183,6 +183,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="resources\dbgBody.txt" />
+    <None Include="resources\keywords.txt" />
     <None Include="resources\ImgPick.png" />
     <None Include="resources\ImgDbg.png" />
     <None Include="resources\dbg.txt" />
