--- a/App/App.csproj
+++ b/App/App.csproj
@@ -138,6 +138,7 @@
     <Compile Include="src\TabPage.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="src\Trie.cs" />
     <Compile Include="src\XmlSerializer.cs" />
     <EmbeddedResource Include="src\App.resx">
       <DependentUpon>App.cs</DependentUpon>
