--- a/App/cs_ext.csproj
+++ b/App/cs_ext.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="csharp\BufferCamera.cs" />
+    <Compile Include="csharp\Converter.cs" />
     <Compile Include="csharp\CsObject.cs" />
     <Compile Include="csharp\PoissonDisc.cs" />
     <Compile Include="csharp\SimpleCamera.cs" />
